# swoosh

./: .gitignore  AGENTS.md  CLAUDE.md  Package.resolved  Package.swift  README.md  project.yml
.agent/: hooks.json
.agent/apple-agentic-swift-coding-agent-plugin/: README.md  agent-plugin.json
.agent/rules/: architecture.md  build.md  naming.md  security.md
.agent/workflows/: permissions.md  skills.md  verify.md
.claude/: README.md  settings.json  topology.md
.codacy/: codacy.yaml
.codex/: README.md  config.toml  hooks.json
.githooks/: pre-commit  pre-push
.superstack/: learnings.md
App/: DetourMacApp.swift  Info.plist  PrivacyInfo.xcprivacy  Swoosh.entitlements  SwooshApp.swift
Docs/: Architecture.md  Audit.md  CHANGELOG_v1.md  DemoScript.md  GenerativeUI.md  GettingStarted.md  ModelArchitecture.md  PRD.md  PermissionModel.md  ScoutSources.md  SpacetimeSpike.md  UX.md  V0Architecture.md  design.md  iOS-Kernel-and-Sync.md
Scripts/: check-flow.sh  coverage.sh  sign-local-development.sh  swift-test-safe.sh
Swoosh.xcodeproj/: project.pbxproj
WidgetExtension/: SwooshWidgetBundle.swift
docs-site/: docusaurus.config.ts  sidebars.ts
onchain/: Anchor.toml  Cargo.toml
onchain/programs/dtour-vault/: Cargo.toml
onchain/programs/dtour-vault/src/: lib.rs
onchain/programs/swoosh-protocol/: Cargo.toml
onchain/programs/swoosh-protocol/src/: errors.rs  lib.rs  state.rs
onchain/programs/swoosh-protocol/src/instructions/: anchor_batch.rs  claim_rebate.rs  initialize.rs  mod.rs  stake.rs  unstake.rs  update_config.rs
scratch/: test_codex.swift
(+1233 files in other folders)
