[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[package]
name = "swoosh-protocol"
version = "0.1.0"
description = "Dtour Protocol — on-chain stake gating, receipt anchoring, and rebate distribution for Swoosh agent crypto toolsets"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
